fix: gap

--- a/styles.css
+++ b/styles.css
@@ -48,13 +48,13 @@ img {
   margin-inline: 1rem;
 
   padding: 1rem;
-  padding-bottom: 2rem;
+  padding-bottom: 2.25rem;
   border-radius: 1.25rem;
 
   display: flex;
   flex-direction: column;
 
-  row-gap: 1.5rem;
+  row-gap: 1.25rem;
 
   text-align: center;
 
@@ -73,8 +73,8 @@ img {
 }
 
 .qr-card > h1 {
-  font-size: 1.5rem;
-  line-height: 2rem;
+  font-size: 1.25rem;
+  line-height: 1.75rem;
   font-weight: 700;
   color: var(--dark-blue);
 }
